# stcolumbas.freechurch.org

./: .gitignore  .netlify  2018-02-03-new-test-headline-yml.json  2018-02-04-test-draft-post.json  2018-09-16-identity.json  2018-09-16-test-headline.json  2018-11-21-7-days-of-prayer.json  2018-11-21-kitchen-appeal.json  2018-11-27-carols-by-candlelight-2018.json  2018-12-19-christmas-and-new-year-service-times.json  2019-03-09-brilliant-books.json  2019-03-11-offering-your-one-and-only.json  2019-03-30-unbelievable-a-message-this-easter-for-sceptics.json  2019-06-06-brilliant-books-june-2019.json  2019-09-22-brilliant-books-september-2019.json  2019-11-25-meet-the-st-columbas-interns-1.json  2019-11-25-meet-the-st-columbas-interns-2.json  2019-11-25-meet-the-st-columbas-interns.json  2019-11-30-women-of-the-word-contentment.json  2019-12-03-brilliant-books-december-2019.json  2019-12-08-carols-by-candlelight-2019.json  CLAUDE.md  Makefile  Pipfile  README.md  build.py  church-plants.json  compare_sites.py  netlify.toml  requirements-dev.txt  requirements-to-freeze.txt  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  server.py  try_quick_build.sh
.claude/: settings.json
.netlify/: state.json
assets/: Payments.elm  build-css.js  cms.js  elm.json  optimise_index.js  package.json  payments.js  postcss.config.js  stcs.js  tailwind.config.js  webpack.config.js
deploy/: hosts  (+4 more)
payments/: Cargo.toml  Procfile  build.sh
payments/elm/: Main.elm  elm-package.json  package.json  payments.js  webpack.config.js
payments/src/: main.rs  stripe.rs
(+436 files in other folders)
