[package]
name = "payments"
version = "0.1.0"
authors = ["Dean Montgomery <montgomery.dean97@gmail.com>"]

[dependencies]
log = "0.4.0"
simplelog = "^0.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
getopts = "0.2"
stripe-rust = "0.4.4"
unicase = "1.4.2"
[dependencies.iron]
version = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
